# libfontenc

./: meson.build
include/: meson.build
src/: encparse.c  fontenc.c  meson.build
